--- a/destinations.html
+++ b/destinations.html
@@ -250,13 +250,13 @@
             <div class="destination">
                 <img src="https://cdn.pixabay.com/photo/2018/02/26/05/21/waterfall-3182326_1280.jpg" alt="Kanchanaburi">
                 <h3>Kanchanaburi</h3>
-                <p>Cunoscută pentru podul de pe râul Kwai.</p>
+                <p> Peisaje montane, istorie captivantă, podul Kwai, cascada Erawan, temple, experiențe unice thailandeze.</p>
                 <a href="kanchanaburi.html" class="cta-button">Descoperă</a>
             </div>
             <div class="destination">
                 <img src="https://cdn.pixabay.com/photo/2017/07/01/10/44/khao-sok-2461179_1280.jpg" alt="Nakhon Ratchasima">
                 <h3>Khao Sok</h3>
-                <p>O destinație perfectă pentru aventură în natură.</p>
+                <p>Junglă tropicală, lac Cheow Lan, faunistă diversă, peisaje spectaculoase, excursii în natură.</p>
                 <a href="Khaosok.html" class="cta-button">Descoperă</a>
             </div>
             <div class="destination">
@@ -268,25 +268,25 @@
             <div class="destination">
                 <img src="https://images.unsplash.com/photo-1579554632071-cffdaad3738c?q=80&w=2070&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="Trang">
                 <h3>Koh Phangan</h3>
-                <p>Un loc mai puțin cunoscut dar la fel de frumos.</p>
+                <p>Plaje idilice, petreceri legendare, peisaje tropicale, relaxare, yoga, snorkeling, aventuri nautice.</p>
                 <a href="kohphangan.html" class="cta-button">Descoperă</a>
             </div>
             <div class="destination">
                 <img src="https://images.unsplash.com/photo-1558983925-819e859f3c70?q=80&w=2070&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="Trang">
                 <h3>Koh Phi Phi</h3>
-                <p>Un loc mai puțin cunoscut dar la fel de frumos.</p>
+                <p>Insule exotice, ape cristaline, plaje spectaculoase, snorkeling, scufundări, peisaje de neuitat.</p>
                 <a href="phiphi.html" class="cta-button">Descoperă</a>
             </div>
             <div class="destination">
                 <img src="https://images.unsplash.com/photo-1715356747228-0b7261d5083c?q=80&w=1884&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="Trang">
                 <h3>Koh Tao</h3>
-                <p>Un loc mai puțin cunoscut dar la fel de frumos.</p>
+                <p>Insulă pitorească, scufundări renumite, plaje liniștite, ape clare, viață marină diversă.</p>
                 <a href="kohtao.html" class="cta-button">Descoperă</a>
             </div>
             <div class="destination">
                 <img src="https://images.unsplash.com/photo-1642391326176-cf6e4ff39f4e?q=80&w=1812&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="Trang">
                 <h3>Khao Yai</h3>
-                <p>Un loc mai puțin cunoscut dar la fel de frumos.</p>
+                <p>Parc național, natură luxuriantă, faunistă diversă, cascade, drumeții, peisaje montane spectaculoase.</p>
                 <a href="Khaoyai.html" class="cta-button">Descoperă</a>
             </div>
         </div>
