--- a/index.html
+++ b/index.html
@@ -294,6 +294,7 @@
             <a href="contact.html">Contact</a>
             <a href="Booking.html">Rezerva acum</a>
             <a href="about.html">Despre noi</a>
+            <a href="customization.html">Creaza-ti propia experienta!</a>
         </nav>
     </div>
     
