--- a/customization.html
+++ b/customization.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Trasia Agency - Customize Your Honeymoon</title>
+    <title>Trasia Agency - Personalizeaza-ti propia vacanta!/title>
     <style>
          body {
             font-family: 'Arial', sans-serif;
@@ -189,13 +189,14 @@
     </header>
     <div class="menu-overlay" id="menuOverlay">
         <nav>
-            <a href="index.html">Home</a>
-            <a href="destinations.html">Destinations</a>
-            <a href="about.html">About Us</a>
-            <a href="services.html">Services</a>
-            <a href="contact.html">Contact</a>
-            <a href="booking.html">Rezerva acum</a>
+            <a href="index.html">Acasa</a>
+            <a href="destinations.html">Destinatii</a>
             <a href="offers.html">Oferte</a>
+            <a href="Services.html">Services</a>
+            <a href="contact.html">Contact</a>
+            <a href="Booking.html">Rezerva acum</a>
+            <a href="about.html">Despre noi</a>
+            <a href="customization.html">Creaza-ti propia experienta!</a>
         </nav>
     </div>
 
