--- a/honeymoon.html
+++ b/honeymoon.html
@@ -348,7 +348,7 @@
                 <div class="destination">
                     <img src="https://images.pexels.com/photos/1024960/pexels-photo-1024960.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2" alt="Beach Package">
                     <h3>Beach Getaway</h3>
-                    <p>Krabi + Phi Phi</p>
+                    <p>Krabi + Koh Yao Yai + Bangkok</p>
                     <a href="honeymoon1.html" class="cta-button">Descopera</a>
                 </div>
                 <div class="destination">
