--- a/honeymoon2.html
+++ b/honeymoon2.html
@@ -182,13 +182,14 @@
 
     <div class="menu-overlay" id="menuOverlay">
         <nav>
-            <a href="index.html">Home</a>
-            <a href="destinations.html">Destinations</a>
-            <a href="about.html">About Us</a>
-            <a href="services.html">Services</a>
+            <a href="index.html">Acasa</a>
+            <a href="destinations.html">Destinatii</a>
+            <a href="offers.html">Oferte</a>
+            <a href="Services.html">Services</a>
             <a href="contact.html">Contact</a>
-            <a href="booking.html">Book Now</a>
-            <a href="offers.html">Offers</a>
+            <a href="Booking.html">Rezerva acum</a>
+            <a href="about.html">Despre noi</a>
+            <a href="customization.html">Creaza-ti propia experienta!</a>
         </nav>
     </div>
 
@@ -202,16 +203,12 @@
             <h2>De ce sa alegi aceasta oferta?</h2>
             <div class="destinations">
                 <div class="destination">
-                    <h3>Bangkok</h3>
-                    <p>Bangkok oferă o combinație unică de cultură vibrantă, gastronomie delicioasă, temple impresionante, viață de noapte animată și shopping diversificat.</p>
+                    <h3>Krabi</h3>
+                    <p>Este o destinatie romantica perfecta pentru luna de miere, plaje de nisip alb, ape turcoaz, peisaje impresionante, insule exotice, activitati de snorkelling, drumetii, apusuri spectaculoase si relaxare totala.</p>
                 </div>
                 <div class="destination">
-                    <h3>Phuket</h3>
-                    <p>Phuket atrage turiști cu plajele sale idilice, viața de noapte vibrantă, o gamă variată de activități acvatice, restaurante excelente și cultură locală fascinantă.</p>
-                </div>
-                <div class="destination">
-                    <h3>Phi Phi Islands</h3>
-                    <p>Insulele Phi Phi sunt renumite pentru peisajele spectaculoase, plajele cu nisip alb, ape cristaline, activități de snorkeling și scuba diving, precum și atmosfera relaxată.</p>
+                    <h3>Chiang Mai</h3>
+                    <p>Este o destinatie romantica in inima Thailandei, temple istorice, peisaje montane, paduri luxuriant, experiente culturale autentice, plimbari pe elefant, viata traditionala si apusuri magice.</p>
                 </div>
             </div>
         </section>
@@ -220,19 +217,14 @@
             <h2>Exclusive Holiday Offers</h2>
             <div class="destinations">
                 <div class="destination">
-                    <img src="https://cdn.pixabay.com/photo/2017/08/30/02/18/phi-2691460_1280.jpg" alt="Bangkok Tour">
-                    <h3>Bangkok Highlights</h3>
-                    <p>Sedere 3 nopti. </p>
+                    <img src="https://cdn.pixabay.com/photo/2014/10/15/09/49/spoke-the-beach-489422_1280.jpg" alt="Bangkok Tour">
+                    <h3>Krabi</h3>
+                    <p>Sedere 5 nopti. </p>
                 </div>
                 <div class="destination">
-                    <img src="https://cdn.pixabay.com/photo/2016/04/26/11/50/thailand-1356685_1280.jpg" alt="Phuket Getaway">
-                    <h3>Phuket Escape</h3>
-                    <p>Sedere 5 nopti.</p>
-                </div>
-                <div class="destination">
-                    <img src="https://cdn.pixabay.com/photo/2016/10/06/10/02/phi-1727036_1280.jpg" alt="Phi Phi Islands">
-                    <h3>Phi Phi Island Adventure</h3>
-                    <p>Sedere 2 nopti</p>
+                    <img src="https://cdn.pixabay.com/photo/2017/04/12/11/05/rice-terraces-2224264_1280.jpg" alt="Phuket Getaway">
+                    <h3>Chiang Mai</h3>
+                    <p>Sedere 3 nopti.</p>
                 </div>
                 
             </div>
@@ -240,47 +232,43 @@
 
         <section id="itinerary" class="section">
             <h2>Your Holiday Itinerary</h2>
-            <p>Explore the best of Thailand over 10 days!</p>
+            <p>Exploreaza Thailanda in 9 zile!</p>
             <div class="itinerary-cards">
                 <div class="itinerary-card">
                     <h3>Day 1</h3>
-                    <p>Relaxare la hotel + plimbare si experimentare China Town.</p>
+                    <p>Relaxare pe plaja si la hotel.</p>
                 </div>
                 <div class="itinerary-card">
                     <h3>Day 2</h3>
-                    <p>Floating Market + Train Market + Dinner Cruise.</p>
+                    <p>Vizita la sanctuarul elefantilor si cina romantica</p>
                 </div>
                 <div class="itinerary-card">
                     <h3>Day 3</h3>
-                    <p>Explorarea templelor si a palatului regal + shopping.</p>
+                     <p>Island Hopping - Descopera insulele din apropiere.</p>
                 </div>
                 <div class="itinerary-card">
                     <h3>Day 4</h3>
-                    <p>Zbor catre Phuket + Relaxare la hotel + Masaj Thailandez.</p>
+                    <p>-</p>
                 </div>
                 <div class="itinerary-card">
                     <h3>Day 5</h3>
-                    <p>Relaxare la plaja si vizitarea sanctuarului pentru elefanti.</p>
+                    <p>-.</p>
                 </div>
                 <div class="itinerary-card">
                     <h3>Day 6</h3>
-                    <p>Island Hopping - Discover nearby islands.</p>
+                    <p>-.</p>
                 </div>
                 <div class="itinerary-card">
                     <h3>Day 7</h3>
-                    <p>Relaxation at the resort - Enjoy spa treatments.</p>
+                    <p>-</p>
                 </div>
                 <div class="itinerary-card">
                     <h3>Day 8</h3>
-                    <p>Local Market Experience - Shop for souvenirs.</p>
+                    <p>-</p>
                 </div>
                 <div class="itinerary-card">
                     <h3>Day 9</h3>
-                    <p>Free day in Phuket - Explore or relax as you wish.</p>
-                </div>
-                <div class="itinerary-card">
-                    <h3>Day 10</h3>
-                    <p>Departure - Take wonderful memories home.</p>
+                    <p>-</p>
                 </div>
             </div>
         </section>
@@ -332,17 +320,6 @@
                 </div>
                 <div class="destination">
                     <p>Asistenta non-stop pe toata sederea in Thailanda.</p>
-                </div>
-            </div>
-        </section>
-        <section id="reasons" class="section">
-            <h2>Ce nu cuprinde vacanta?</h2>
-            <div class="destinations">
-                <div class="destination">
-                    <p>Bilete de avion</p>
-                </div>
-                <div class="destination">
-                    <p>Asigurare medicala</p>
                 </div>
             </div>
         </section>
