--- a/honeymoon3.html
+++ b/honeymoon3.html
@@ -221,7 +221,7 @@
             <h2>Exclusive Holiday Offers</h2>
             <div class="destinations">
                 <div class="destination">
-                    <img src="https://cdn.pixabay.com/photo/2017/08/30/02/18/phi-2691460_1280.jpg" alt="Bangkok Tour">
+                    <img src="https://images.pexels.com/photos/1374377/pexels-photo-1374377.jpeg" alt="Bangkok Tour">
                     <h3>Bangkok </h3>
                     <p>Sedere 3 nopti. </p>
                 </div>
