--- a/offers.html
+++ b/offers.html
@@ -214,13 +214,13 @@
             </div>
             <div class="offer">
                 <img src="https://images.unsplash.com/photo-1698114424118-028873182fe4?q=80&w=2073&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="Culinary Tour">
-                <h3>Bangkok - Chiang Mai - Chiang Rai (10 zile)</h3>
+                <h3>Bangkok - Chiang Mai - Phuket (14 zile)</h3>
                 <p>Explorati Bangkok-ul vibrant, templele antice din Chiang Mai si peisajele din Chiang Rai</p>
                 <a href="Vacanta2.html" class="cta-button">Detalii</a>
             </div>
             <div class="offer">
                 <img src="https://images.pexels.com/photos/4394296/pexels-photo-4394296.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2" alt="Wellness Retreat">
-                <h3>Phuket - Island Hopping (8 zile)</h3>
+                <h3>Bangkok - Krabi - Phuket (14 zile)</h3>
                 <p>Relaxează-te și reîncarcă-ți energia pe cele mai frumoase plaje</p>
                 <a href="Vacanta3.html" class="cta-button">Detalii</a>
             </div>
@@ -232,13 +232,31 @@
             </div>
             <div class="offer">
                 <img src="https://images.pexels.com/photos/13099696/pexels-photo-13099696.jpeg" alt="Cultural Experience">
-                <h3>Bangkok - Pattaya - Phuket - Phi Phi Islands (15 zile)</h3>
+                <h3>Bangkok - Chiang Mai - Chiang Rai - Phuket - Krabi (15 zile)</h3>
                 <p>Explorati agitatia Bagkokului, viata de noapte din Pattaya, plajele spectaculoase din Phuket si insulele Phi Phi</p>
                 <a href="Vacanta5.html" class="cta-button">Detalii</a>
             </div>
             <div class="offer">
                 <img src="https://images.pexels.com/photos/5567082/pexels-photo-5567082.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2" alt="Cultural Experience">
                 <h3>Krabi - Koh Samui - Chiang Mai (12 zile) </h3>
+                <p>Descopera peisajele uluitoare din Krabi, relaxeaza-te in Koh Samui, si experimenteaza traditia in Chiang Mai</p>
+                <a href="Vacanta6.html" class="cta-button">Detalii</a>
+            </div>
+            <div class="offer">
+                <img src="https://images.pexels.com/photos/5567082/pexels-photo-5567082.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2" alt="Cultural Experience">
+                <h3>Chiang Mai - Khao Sok - Krabi (12 zile) </h3>
+                <p>Descopera peisajele uluitoare din Krabi, relaxeaza-te in Koh Samui, si experimenteaza traditia in Chiang Mai</p>
+                <a href="Vacanta6.html" class="cta-button">Detalii</a>
+            </div>
+            <div class="offer">
+                <img src="https://images.pexels.com/photos/5567082/pexels-photo-5567082.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2" alt="Cultural Experience">
+                <h3>Koh Samui (7 zile) </h3>
+                <p>Descopera peisajele uluitoare din Krabi, relaxeaza-te in Koh Samui, si experimenteaza traditia in Chiang Mai</p>
+                <a href="Vacanta6.html" class="cta-button">Detalii</a>
+            </div>
+            <div class="offer">
+                <img src="https://images.pexels.com/photos/5567082/pexels-photo-5567082.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2" alt="Cultural Experience">
+                <h3>Phuket - Phi Phi(8 zile) </h3>
                 <p>Descopera peisajele uluitoare din Krabi, relaxeaza-te in Koh Samui, si experimenteaza traditia in Chiang Mai</p>
                 <a href="Vacanta6.html" class="cta-button">Detalii</a>
             </div>
