--- a/offers.html
+++ b/offers.html
@@ -237,25 +237,25 @@
                 <a href="Vacanta5.html" class="cta-button">Detalii</a>
             </div>
             <div class="offer">
-                <img src="https://images.pexels.com/photos/5567082/pexels-photo-5567082.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2" alt="Cultural Experience">
+                <img src="https://images.pexels.com/photos/1154193/pexels-photo-1154193.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2" alt="Cultural Experience">
                 <h3>Krabi - Koh Samui - Chiang Mai (12 zile) </h3>
                 <p>Descopera peisajele uluitoare din Krabi, relaxeaza-te in Koh Samui, si experimenteaza traditia in Chiang Mai</p>
                 <a href="Vacanta6.html" class="cta-button">Detalii</a>
             </div>
             <div class="offer">
-                <img src="https://images.pexels.com/photos/5567082/pexels-photo-5567082.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2" alt="Cultural Experience">
+                <img src="https://images.pexels.com/photos/10849935/pexels-photo-10849935.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2" alt="Cultural Experience">
                 <h3>Chiang Mai - Khao Sok - Krabi (12 zile) </h3>
                 <p>Descopera peisajele uluitoare din Krabi, relaxeaza-te in Koh Samui, si experimenteaza traditia in Chiang Mai</p>
                 <a href="Vacanta6.html" class="cta-button">Detalii</a>
             </div>
             <div class="offer">
-                <img src="https://images.pexels.com/photos/5567082/pexels-photo-5567082.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2" alt="Cultural Experience">
+                <img src="https://cdn.pixabay.com/photo/2015/03/26/11/11/beach-692608_1280.jpg" alt="Cultural Experience">
                 <h3>Koh Samui (7 zile) </h3>
                 <p>Descopera peisajele uluitoare din Krabi, relaxeaza-te in Koh Samui, si experimenteaza traditia in Chiang Mai</p>
                 <a href="Vacanta6.html" class="cta-button">Detalii</a>
             </div>
             <div class="offer">
-                <img src="https://images.pexels.com/photos/5567082/pexels-photo-5567082.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2" alt="Cultural Experience">
+                <img src="https://images.pexels.com/photos/797868/pexels-photo-797868.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2" alt="Cultural Experience">
                 <h3>Phuket - Phi Phi(8 zile) </h3>
                 <p>Descopera peisajele uluitoare din Krabi, relaxeaza-te in Koh Samui, si experimenteaza traditia in Chiang Mai</p>
                 <a href="Vacanta6.html" class="cta-button">Detalii</a>
