--- a/Vacanta2.html
+++ b/Vacanta2.html
@@ -302,8 +302,9 @@
                 </div>
                 <div class="itinerary-card">
                     <h3>Ziua 8</h3>
-                    <p>• </p>
-                    <p>• </p>
+                    <p>• A Serene <b>Cave Temple</b> Surrounded by Nature</p>
+                    <p>• The Heart of Thai Umbrella Craftsmanship</p>
+                    <p>•⁠ Experience Silkworm Farming and Traditional Silk Weaving⁠⁠</p>                    
                     <p>• Historic Gate and Gateway to the Best <b>Local Markets</b></p>
                 </div>                
                 <div class="itinerary-card">
@@ -314,35 +315,32 @@
                 <div class="itinerary-card">
                     <h3>Ziua 10</h3>
                     <p>• Viziteaza faimoasa statuie <b>Big Buddha</b> </p>
+                    <p>• Home to a 60 meter Chedi Housing Buddha’s Relic</p>
                     <p>• Admira prietenii giganti la sanctuarul elefantilor </p>
                 </div>
                 <div class="itinerary-card">
                     <h3>Ziua 11</h3>
                     <p>• Relaxeaza-te pe plajele superbe din Phuket</p>
                     <p>• Shopping la pietele locale sau la mallurile de lux </p>
+                    <p>• Bucura-te de apus si de un fire show pe plaja </p>   
                 </div>
                 <div class="itinerary-card">
                     <h3>Ziua 12</h3>
-                    <p>• Tur cu barca in insulele vecine orasului.</p>
-                    <p>• Snorkeling in apele cristaline </p>
-                    <p>• Bucura-te de apus si de un fire show pe plaja </p>                
+                    <p>• Viziteaza frumusetea oferita de insulele <b>Phi Phi</b> </p>
+                    <p>• Descopera uimitoarea <b>Maya Bay</b></p>
+                    <p>• Admira <b>Pi Leh Lagoon</b></p>
+                    <p>• Bucura-te de viata marina din apele cristaline cu ajutorul snorkelingului</p>             
                 </div>
                 <div class="itinerary-card">
                     <h3>Ziua 13</h3>
                     <p>• Distreaza-te la <b>Andaman Sea Water Park</b> </p>
+                    <p>• Cafe Phuket ofera mancare traditionala, case autentice si o ferma de lotus </p>
+                    <p>• Distreaza-te la un parc tematic </p>
                     <p>• Savureaza cina in jungla inconjurat doar de natura. </p>
                 </div>
                 <div class="itinerary-card">
                     <h3>Day 14</h3>
-                    <p>• Viziteaza frumusetea oferita de insulele <b>Phi Phi</b> </p>
-                    <p>• Descopera uimitoarea <b>Maya Bay</b></p>
-                    <p>• Admira <b>Pi Leh Lagoon</b></p>
-                    <p>• Bucura-te de viata marina din apele cristaline cu ajutorul snorkelingului</p>
-                </div>
-                <div class="itinerary-card">
-                    <h3>Ziua 15</h3>
-                    <p>• Cafe Phuket ofera mancare traditionala, case autentice si o ferma de lotus </p>
-                    <p>• Distreaza-te la un parc tematic </p>
+                    <p>• </p>
                 </div>
             </div>
         </section>
