--- a/Vacanta2.html
+++ b/Vacanta2.html
@@ -277,11 +277,12 @@
                 </div>
                 <div class="itinerary-card">
                     <h3>Ziua 4</h3>
-                    <p>• Shopping la un mall cu preturi uimitoare</p>
+                    <p>• Shopping la un mall cu preturi uimitoare</p> 
+                    <p>• Sosire la Chiang Mai</p>
                 </div>                            
                 <div class="itinerary-card">
                     <h3>Ziua 5</h3>
-                    <p>• The Monastery of the Lion Buddha</p>
+                    <p>• The Monastery of the <b>Lion Buddha</b></p>
                     <p>• Chiang Mai Heritage at the City Arts & Cultural Museum</p>
                     <p>• A Garden of Tranquility and Royal Heritage</p>
                     <p>• Experience a Unique and Immersive Wildlife Adventure After Dark</p>
@@ -291,7 +292,7 @@
                     <p>• Explore <b>Doi Suthep</b> Spiritual and Natural Beauty</p>
                     <p>• Unique glimpse into the traditional lifestyle of the <b>Hmong people</b></p>
                     <p>• Come Taste the Authentic <b>Khao Soi</b> of Chiang Mai</p>
-                    <p>• Shop and Explore Central Chiang Mai Best Malls</p>
+                    <p>• Shop Central Chiang Mai Best Malls</p>
                     
                 </div>
                 <div class="itinerary-card">
@@ -304,7 +305,7 @@
                     <h3>Ziua 8</h3>
                     <p>• A Serene <b>Cave Temple</b> Surrounded by Nature</p>
                     <p>• The Heart of Thai Umbrella Craftsmanship</p>
-                    <p>•⁠ Experience Silkworm Farming and Traditional Silk Weaving⁠⁠</p>                    
+                    <p>•⁠ Experience <b>Silkworm Farming</b> and Traditional Silk Weaving⁠⁠</p>                    
                     <p>• Historic Gate and Gateway to the Best <b>Local Markets</b></p>
                 </div>                
                 <div class="itinerary-card">
@@ -315,14 +316,14 @@
                 <div class="itinerary-card">
                     <h3>Ziua 10</h3>
                     <p>• Viziteaza faimoasa statuie <b>Big Buddha</b> </p>
-                    <p>• Home to a 60 meter Chedi Housing Buddha’s Relic</p>
+                    <p>• Home to a 60 meter Chedi Housing Buddha Relic</p>
                     <p>• Admira prietenii giganti la sanctuarul elefantilor </p>
                 </div>
                 <div class="itinerary-card">
                     <h3>Ziua 11</h3>
                     <p>• Relaxeaza-te pe plajele superbe din Phuket</p>
                     <p>• Shopping la pietele locale sau la mallurile de lux </p>
-                    <p>• Bucura-te de apus si de un fire show pe plaja </p>   
+                    <p>• Bucura-te de apus si de un <b>fire show</b> pe plaja </p>   
                 </div>
                 <div class="itinerary-card">
                     <h3>Ziua 12</h3>
@@ -333,14 +334,13 @@
                 </div>
                 <div class="itinerary-card">
                     <h3>Ziua 13</h3>
-                    <p>• Distreaza-te la <b>Andaman Sea Water Park</b> </p>
                     <p>• Cafe Phuket ofera mancare traditionala, case autentice si o ferma de lotus </p>
-                    <p>• Distreaza-te la un parc tematic </p>
-                    <p>• Savureaza cina in jungla inconjurat doar de natura. </p>
+                    <p>• Savureaza cina in jungla inconjurat doar de natura </p>
+                    <p>• Visit Vibrant Parades and Colorful Costumes </p>
                 </div>
                 <div class="itinerary-card">
                     <h3>Day 14</h3>
-                    <p>• </p>
+                    <p>• Enjoy the morning at the beach </p>
                 </div>
             </div>
         </section>
