--- a/Vacanta1.html
+++ b/Vacanta1.html
@@ -288,14 +288,14 @@
                 </div>
                 <div class="itinerary-card">
                     <h3>Ziua 7</h3>
-                    <p>• Tur cu barca in insulele vecine orasului.</p>
+                    <p>• Tur cu barca in insulele vecine orasului </p>
                     <p>• Snorkeling in apele cristaline </p>
                     <p>• Bucura-te de apus si de un fire show pe plaja </p>                
                 </div>
                 <div class="itinerary-card">
                     <h3>Ziua 8</h3>
                     <p>• Distreaza-te la <b>Andaman Sea Water Park</b> </p>
-                    <p>• Savureaza cina in jungla inconjurat doar de natura. </p>
+                    <p>• Savureaza cina in jungla inconjurat doar de natura </p>
                 </div>
                 <div class="itinerary-card">
                     <h3>Day 9</h3>
@@ -307,7 +307,7 @@
                 <div class="itinerary-card">
                     <h3>Ziua 10</h3>
                     <p>• Cafe Phuket ofera mancare traditionala, case autentice si o ferma de lotus </p>
-                    <p>• Distreaza-te la un parc tematic </p>
+                    <p>• Visit Vibrant Parades and Colorful Costumes </p>
                 </div>
                 <div class="itinerary-card">
                     <h3>Ziua 11</h3>
