--- a/Vacanta3.html
+++ b/Vacanta3.html
@@ -273,7 +273,8 @@
                 <div class="itinerary-card">
                     <h3>Ziua 4</h3>
                     <p>• Shopping la un mall cu preturi uimitoare</p>
-                </div>            
+                </div>
+                <div class="itinerary-card">
                     <h3>Ziua 5</h3>
                     <p>• One Day Trip To Railay Beach</p>
                     <p>•⁠ Cave of the Princess Goddess Legend</p>
