--- a/Vacanta3.html
+++ b/Vacanta3.html
@@ -276,7 +276,7 @@
                 </div>
                 <div class="itinerary-card">
                     <h3>Ziua 5</h3>
-                    <p>• One Day Trip To Railay Beach</p>
+                    <p>• One Day Trip To <b>Railay Beach</b></p>
                     <p>•⁠ Cave of the Princess Goddess Legend</p>
                 </div>
                 <div class="itinerary-card">
@@ -285,14 +285,14 @@
                 </div>
                 <div class="itinerary-card">
                     <h3>Ziua 7</h3>
-                    <p>• Visiting The Blue Pool
+                    <p>• Visiting The <b>Blue Pool</b>
                     <P>•⁠ Explore Tiger Cave Temple</P>
                     <p>•⁠ Elephant Sanctuary </p>
                     <p>•⁠ ⁠Enjoy Landmark Night Market</p>
                 </div>
                 <div class="itinerary-card">
                     <h3>Ziua 8</h3>
-                    <p>• 
+                    <p>• Enjoy The Famous Beach Krabi </p> 
                 </div>
                 <div class="itinerary-card">
                  <h3>Ziua 9</h3>
