--- a/Vacanta4.html
+++ b/Vacanta4.html
@@ -254,22 +254,21 @@
             <div class="itinerary-cards">
                 <div class="itinerary-card">
                     <h3>Ziua 1</h3>
-                    <p>• Relaxare la Hotel </p>
-                    <p>• Cina la Nest Bird cu vedere la plaja </p>
-                    <p>• Exploreaza energia vibranta a faimosului <b>Walking Street</b> </p>
+                    <p>• Sosire la <b>Khao Sok</b> </p>
+                    <p>• Take a Short Jugle Trek </p>
+                    <p>• Enjoy <b>River Tubinh or Canoeing</b> </p>
+                    <p>• Join A Night Safari </p>
                 </div>
                 <div class="itinerary-card">
                     <h3>Ziua 2</h3>
-                    <p>• Descopera Maretia <b>Sanctuary of Truth</b> </p>
-                    <p>• Exploreaza stilul international la mall <b>Terminal 21 Pattaya</b> </p>
-                    <p>• Relaxare si revitalizare cu ajutorul masajului Thailanezesc </p>
-                    <p>• Participa la spectacolul celebru <b>Tiffany Show</b> </p>
+                    <p>• Day Tour to Famous Lake </p>
+                    <p>• Enjoy Water Sports and Activities </p>
+                    <p>• Relax At The <b>Floating House</b> </p>
                 </div>
                 <div class="itinerary-card">
                     <h3>Ziua 3</h3>
-                    <p>• Relaxeaza-te intr-un paradis tropical pe <b>Koh Larn</b> </p>
-                    <p>• Incearca sporturi nautice </p>
-                    <p>• Bucura-te de plaje cu nisip fin si ape cristaline </p>
+                    <p>• Visit a Nearby Viewpoint or Waterfalls </p>
+                    <p>• Sosire la <b>Khao Sok</b> </p>
                 </div>
                 <div class="itinerary-card">
                     <h3>Ziua 4</h3>
