--- a/Vacanta4.html
+++ b/Vacanta4.html
@@ -270,6 +270,21 @@
                     <p>• Visit a Nearby Viewpoint or Waterfalls </p>
                     <p>• Sosire la <b>Khao Sok</b> </p>
                 </div>
+                  <div class="itinerary-card">
+                    <h3>Ziua 4</h3>
+                    <p>• Visit a Nearby Viewpoint or Waterfalls </p>
+                    <p>• Sosire la <b>Khao Sok</b> </p>
+                </div>   
+                  <div class="itinerary-card">
+                    <h3>Ziua 5</h3>
+                    <p>• Visit a Nearby Viewpoint or Waterfalls </p>
+                    <p>• Sosire la <b>Khao Sok</b> </p>
+                </div>              
+                  <div class="itinerary-card">
+                    <h3>Ziua 6</h3>
+                    <p>• Visit a Nearby Viewpoint or Waterfalls </p>
+                    <p>• Sosire la <b>Khao Sok</b> </p>
+                </div>
                 <div class="itinerary-card">
                     <h3>Ziua 4</h3>
                     <p>• Sosire la Phuket </p>
