--- a/Vacanta4.html
+++ b/Vacanta4.html
@@ -285,7 +285,8 @@
                     <p>• Visit a Nearby Viewpoint or Waterfalls </p>
                     <p>• Sosire la <b>Khao Sok</b> </p>
                 </div>
-                 <h3>Ziua 7</h3>
+                <div class="itinerary-card">
+                    <h3>Ziua 7</h3>
                     <p>• Sosire la Phuket </p>
                     <p>• Exploreaza centrul vechi plin de culori </p>
                 </div>
