--- a/Vacanta4.html
+++ b/Vacanta4.html
@@ -255,8 +255,8 @@
                 <div class="itinerary-card">
                     <h3>Ziua 1</h3>
                     <p>• Sosire la <b>Khao Sok</b> </p>
-                    <p>• Take a Short Jugle Trek </p>
-                    <p>• Enjoy <b>River Tubinh or Canoeing</b> </p>
+                    <p>• Take a Short Jungle Trek </p>
+                    <p>• Enjoy <b>River Tubing or Canoeing</b> </p>
                     <p>• Join A Night Safari </p>
                 </div>
                 <div class="itinerary-card">
@@ -272,18 +272,20 @@
                 </div>
                   <div class="itinerary-card">
                     <h3>Ziua 4</h3>
-                    <p>• Visit a Nearby Viewpoint or Waterfalls </p>
-                    <p>• Sosire la <b>Khao Sok</b> </p>
+                    <p>• ⁠Sosire la <b>Khao Sok</b> </p>
+                    <p>•⁠ ⁠⁠Relax on the beautiful beaches </p>
+                    <p>•⁠ ⁠⁠Explore the Local Night Markets</p>
                 </div>   
                   <div class="itinerary-card">
                     <h3>Ziua 5</h3>
-                    <p>• Visit a Nearby Viewpoint or Waterfalls </p>
-                    <p>• Sosire la <b>Khao Sok</b> </p>
-                </div>              
+                    <p>• ⁠Take a Day trip to Beautiful Island </p> 
+                    <p>•⁠ Snorkeling or Diving Experience </p>
+                    <p>•⁠ ⁠⁠Explore Fishing Villages </p>                
+                  </div>              
                   <div class="itinerary-card">
                     <h3>Ziua 6</h3>
-                    <p>• Visit a Nearby Viewpoint or Waterfalls </p>
-                    <p>• Sosire la <b>Khao Sok</b> </p>
+                    <p>• ⁠Visit Khao Lak National Park </p>
+                    <p>•⁠ ⁠⁠Visit a Nearby Viewpoint or Waterfalls  </p>
                 </div>
                 <div class="itinerary-card">
                     <h3>Ziua 7</h3>
