--- a/Vacanta4.html
+++ b/Vacanta4.html
@@ -283,12 +283,12 @@
                   </div>              
                   <div class="itinerary-card">
                     <h3>Ziua 6</h3>
-                    <p>• ⁠Visit Khao Lak National Park </p>
+                    <p>• ⁠Visit <b>Khao Lak National Park</b> </p>
                     <p>•⁠ ⁠⁠Visit a Nearby Viewpoint or Waterfalls  </p>
                 </div>                 
                 <div class="itinerary-card">
                     <h3>Ziua 7</h3>
-                    <p>• Sosire la Phuket </p>
+                    <p>• Sosire la <b>Phuket</b></p>
                     <p>• Exploreaza centrul vechi plin de culori </p>
                 </div>
                 <div class="itinerary-card">
