--- a/Vacanta4.html
+++ b/Vacanta4.html
@@ -278,7 +278,7 @@
                   <div class="itinerary-card">
                     <h3>Ziua 5</h3>
                     <p>• ⁠Take a Day trip to Beautiful Island </p> 
-                    <p>•⁠ Snorkeling or Diving Experience </p>
+                    <p>•⁠ <b>Snorkeling or Diving</b>Experience </p>
                     <p>•⁠ ⁠⁠Explore Fishing Villages </p>                
                   </div>              
                   <div class="itinerary-card">
