--- a/Vacanta1.html
+++ b/Vacanta1.html
@@ -273,7 +273,7 @@
                 </div>
                 <div class="itinerary-card">
                     <h3>Ziua 4</h3>
-                    <p>• Sosire la Phuket </p>
+                    <p>• Sosire la <b>Phuket</b></p>
                     <p>• Exploreaza centrul vechi plin de culori </p>
                 </div>
                 <div class="itinerary-card">
