--- a/Vacanta4.html
+++ b/Vacanta4.html
@@ -227,24 +227,20 @@
             <div class="destinations">
                  <div class="destination">
                     <img src="https://res.cloudinary.com/dpwoqx0xz/image/upload/v1731834993/iStock-689879464_nayo2f.jpg" alt="Bangkok Tour">
-                    <h3>Pattaya</h3>
-                    <p>Sedere 3 nopti </p>
+                    <h3>Khao Sok</h3>
                 </div>
+                 <div class="destination">
+                    <img src="https://res.cloudinary.com/dpwoqx0xz/image/upload/v1731833737/iStock-2113145841_vafiss.jpg" alt="Bangkok Tour">
+                    <h3>Khao Lak</h3>
+                </div> 
                 <div class="destination">
                     <img src="https://res.cloudinary.com/dpwoqx0xz/image/upload/v1731833320/iStock-1491859203_ry1lbb.jpg" alt="Phuket Getaway">
                     <h3>Phuket Escape</h3>
-                    <p>Sedere 5 nopti </p>
                 </div>
                 <div class="destination">
                     <img src="https://res.cloudinary.com/dpwoqx0xz/image/upload/v1731837122/iStock-1128965769-2_pwcjc5.jpg" alt="Phi Phi Islands">
                     <h3>Phi Phi Island</h3>
-                    <p>Sedere 1 zi </p>
                 </div>
-                  <div class="destination">
-                    <img src="https://res.cloudinary.com/dpwoqx0xz/image/upload/v1731833737/iStock-2113145841_vafiss.jpg" alt="Bangkok Tour">
-                    <h3>Bangkok </h3>
-                    <p>Sedere 3 nopti </p>
-                </div> 
             </div>
         </section>
 
