--- a/Vacanta4.html
+++ b/Vacanta4.html
@@ -226,7 +226,7 @@
             <h2>Exclusive Holiday Offers</h2>
             <div class="destinations">
                  <div class="destination">
-                    <img src="https://res.cloudinary.com/dpwoqx0xz/image/upload/v1736685416/marcin-kalinski-9u-TGFaFPwI-unsplash_hmd4ud.jpg="Bangkok Tour">
+                    <img src="https://res.cloudinary.com/dpwoqx0xz/image/upload/v1736685416/marcin-kalinski-9u-TGFaFPwI-unsplash_hmd4ud.jpg" alt="Bangkok Tour">
                     <h3>Khao Sok</h3>
                 </div>
                  <div class="destination">
