--- a/index.html
+++ b/index.html
@@ -292,7 +292,7 @@
             <a href="offers.html">Oferte</a>
             <a href="Services.html">Services</a>
             <a href="contact.html">Contact</a>
-            <a href="Booking.html">Rezerva acum</a>
+            <a href="Booking.html">Cere Oferta!</a>
             <a href="about.html">Despre noi</a>
             <a href="customization.html">Creaza-ti propia experienta!</a>
         </nav>
@@ -434,6 +434,11 @@
                     <img src="https://i.imgur.com/8hjiNS2.jpeg" alt="Denis" style="width: 40px; height: 40px; border-radius: 50%; margin-right: 10px;"> 
                     "Super vacanta! Am incercat atat cultura Thailandezeasca cat si distractia oferita de Bangkok. Serviciile au fost super. Recomand Trasia !!" 
                     <br>- Andrei A.
+                </p>
+                <p>
+                    <img src="https://i.imgur.com/8hjiNS2.jpeg" alt="Denis" style="width: 40px; height: 40px; border-radius: 50%; margin-right: 10px;"> 
+                    "Mi-au fost depasite asteptarile cu mult. Thailanda chiar merita vizitata, iar noi o sa ne intoarcem curand cu siguranta! " 
+                    <br>- Denisa A.
                 </p>
             </div>
             <button class="prev" onclick="showTestimonial(-1)">❮</button>
