--- a/offers.html
+++ b/offers.html
@@ -226,7 +226,7 @@
             </div>
             <div class="offer">
                 <img src="https://images.pexels.com/photos/708764/pexels-photo-708764.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2" alt="Cultural Experience">
-                <h3>Bangkok - Chiang Mai - Krabi (11 zile)</h3>
+                <h3>Khao Lak - Khao Sok - Phuket (12 zile)</h3>
                 <p>Descopera Bangkok-ul plin de viata, cultura din Chiang Mai, si plajele din Krabi</p>
                 <a href="Vacanta4.html" class="cta-button">Detalii</a>
             </div>
@@ -254,12 +254,7 @@
                 <p>Descopera peisajele uluitoare din Krabi, relaxeaza-te in Koh Samui, si experimenteaza traditia in Chiang Mai</p>
                 <a href="Vacanta6.html" class="cta-button">Detalii</a>
             </div>
-            <div class="offer">
-                <img src="https://images.pexels.com/photos/797868/pexels-photo-797868.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2" alt="Cultural Experience">
-                <h3>Phuket - Phi Phi(8 zile) </h3>
-                <p>Descopera peisajele uluitoare din Krabi, relaxeaza-te in Koh Samui, si experimenteaza traditia in Chiang Mai</p>
-                <a href="Vacanta6.html" class="cta-button">Detalii</a>
-            </div>
+            
             <div class="offer">
                 <img src="https://images.unsplash.com/photo-1523837157348-ffbdaccfc7de?q=80&w=2073&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="Cultural Experience">
                 <h3>Personalizeaza propia ta vacanta</h3>
