--- a/offers.html
+++ b/offers.html
@@ -187,7 +187,7 @@
             <a href="about.html">Despre Noi</a>
             <a href="services.html">Servicii</a>
             <a href="contact.html">Contact</a>
-            <a href="booking.html">Rezerva acum</a>
+            <a href="booking.html">Cere oferta!</a>
             <a href="offers.html">Oferte</a>
         </nav>
     </div>
@@ -246,13 +246,13 @@
                 <img src="https://images.pexels.com/photos/10849935/pexels-photo-10849935.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2" alt="Cultural Experience">
                 <h3>Chiang Mai - Khao Sok - Krabi (12 zile) </h3>
                 <p>Descopera peisajele uluitoare din Krabi, relaxeaza-te in Koh Samui, si experimenteaza traditia in Chiang Mai</p>
-                <a href="Vacanta6.html" class="cta-button">Detalii</a>
+                <a href="Vacanta7.html" class="cta-button">Detalii</a>
             </div>
             <div class="offer">
                 <img src="https://cdn.pixabay.com/photo/2015/03/26/11/11/beach-692608_1280.jpg" alt="Cultural Experience">
                 <h3>Koh Samui (7 zile) </h3>
                 <p>Descopera peisajele uluitoare din Krabi, relaxeaza-te in Koh Samui, si experimenteaza traditia in Chiang Mai</p>
-                <a href="Vacanta6.html" class="cta-button">Detalii</a>
+                <a href="Vacanta8.html" class="cta-button">Detalii</a>
             </div>
             
             <div class="offer">
