--- a/index.html
+++ b/index.html
@@ -300,7 +300,7 @@
     
     <div class="hero">
         <h1>Exploreaza Thailanda cu noi! </h1>
-        <a href="Booking.html" class="cta-button">Rezerva acum</a>
+        <a href="Booking.html" class="cta-button">Cere Oferta!</a>
     </div>
     
     <div class="section">
