--- a/index.html
+++ b/index.html
@@ -435,6 +435,8 @@
                     "Super vacanta! Am incercat atat cultura Thailandezeasca cat si distractia oferita de Bangkok. Serviciile au fost super. Recomand Trasia !!" 
                     <br>- Andrei A.
                 </p>
+            </div>
+            <div class="testimonial">
                 <p>
                     <img src="https://i.imgur.com/8hjiNS2.jpeg" alt="Denis" style="width: 40px; height: 40px; border-radius: 50%; margin-right: 10px;"> 
                     "Mi-au fost depasite asteptarile cu mult. Thailanda chiar merita vizitata, iar noi o sa ne intoarcem curand cu siguranta! " 
