--- a/destinations.html
+++ b/destinations.html
@@ -180,14 +180,14 @@
             <a href="offers.html">Oferte</a>
             <a href="Services.html">Services</a>
             <a href="contact.html">Contact</a>
-            <a href="Booking.html">Rezerva acum</a>
+            <a href="Booking.html">Cere Oferta!</a>
             <a href="about.html">Despre noi</a>
         </nav>
     </div>
     
     <div class="hero">
         <h1>Explorează Thailanda cu noi!</h1>
-        <a href="booking.html" class="cta-button">Rezerva acum</a>
+        <a href="booking.html" class="cta-button">Cere Oferta!</a>
     </div>
     
     <div class="section">
