--- a/destinations.html
+++ b/destinations.html
@@ -178,7 +178,7 @@
             <a href="index.html">Acasa</a>
             <a href="destinations.html">Destinatii</a>
             <a href="offers.html">Oferte</a>
-            <a href="Services.html">Services</a>
+            <a href="Services.html">Servicii</a>
             <a href="contact.html">Contact</a>
             <a href="Booking.html">Cere Oferta!</a>
             <a href="about.html">Despre noi</a>
