--- a/Booking.html
+++ b/Booking.html
@@ -187,21 +187,23 @@
 
     <div class="menu-overlay" id="menuOverlay">
         <nav>
-            <a href="index.html">Home</a>
-            <a href="destinations.html">Destinations</a>
-            <a href="about.html">About Us</a>
-            <a href="services.html">Services</a>
+            <a href="index.html">Acasa</a>
+            <a href="destinations.html">Destinatii</a>
+            <a href="offers.html">Oferte</a>
+            <a href="Services.html">Servicii</a>
             <a href="contact.html">Contact</a>
-            <a href="Booking.html">Rezerva acum</a>
+            <a href="Booking.html">Cere Oferta!</a>
+            <a href="about.html">Despre noi</a>
+
         </nav>
     </div>
 
     <div class="hero">
-        <h1>Rezervați Vacanța Dvs. de Vis!</h1>
+        <h1>Cere oferta pentru Vacanța Dvs. de Vis!</h1>
     </div>
 
     <div class="section">
-        <h2>Rezerva acum</h2>
+        <h2>Cere Oferta!</h2>
     <form id="bookingForm" action="https://script.google.com/macros/s/AKfycbyiwTnXd84WqI4IhhTeKYjXOMCLitUGyLsOoD8xwhIE9ecUcZrm9Kaoln5xmn6SlA3K/exec" method="POST">
      <label for="name">Numele dvs.</label>
     <input type="text" id="name" name="name" required>
