--- a/Phangngabay.html
+++ b/Phangngabay.html
@@ -135,12 +135,14 @@
         <div class="logo">Trasia Agency</div>
         <button class="hamburger" onclick="toggleMenu()">☰</button>
         <nav class="menu" id="navMenu">
-            <a href="index.html">Home</a>
-            <a href="destinations.html">Destinations</a>
-            <a href="Services.html">Services</a>
-            <a href="about.html">About Us</a>
+            <a href="index.html">Acasa</a>
+            <a href="destinations.html">Destinatii</a>
+            <a href="offers.html">Oferte</a>
+            <a href="Services.html">Servicii</a>
             <a href="contact.html">Contact</a>
-            <a href="Booking.html">BOOK NOW</a>
+            <a href="Booking.html">Cere Oferta!</a>
+            <a href="about.html">Despre noi</a>
+
         </nav>
     </header>
     
