--- a/Services.html
+++ b/Services.html
@@ -165,19 +165,20 @@
 
     <div class="menu-overlay" id="menuOverlay">
         <nav>
-            <a href="index.html">Home</a>
-            <a href="destinations.html">Destinations</a>
-            <a href="about.html">About Us</a>
-            <a href="services.html">Services</a>
+            <a href="index.html">Acasa</a>
+            <a href="destinations.html">Destinatii</a>
+            <a href="offers.html">Oferte</a>
+            <a href="Services.html">Servicii</a>
             <a href="contact.html">Contact</a>
-            <a href="booking.html">Book Now</a>
-            <a href="offers.html">Offers</a>
+            <a href="Booking.html">Cere Oferta!</a>
+            <a href="about.html">Despre noi</a>
+
         </nav>
     </div>
 
     <div class="hero">
         <h1>Serviciile noastre</h1>
-        <a class="cta-button" href="booking.html">Book Now</a>
+        <a class="cta-button" href="booking.html">Cere oferta!</a>
     </div>
 
     <main>
